--- a/sync.conf
+++ b/sync.conf
@@ -1,9 +1,9 @@
 {
-  "storage_path" : "/root/.sync",
+  "storage_path" : "/home/app-admin/.sync",
   "use_upnp" : true,
   "download_limit" : 0,
   "upload_limit" : 0,
-  "directory_root" : "/root/",
+  "directory_root" : "/",
   "webui" :
   {
     "listen" : "0.0.0.0:31003"
